# game-list-app

./: README.md  application.Dockerfile  docker-compose.yaml  pyproject.toml  tests.Dockerfile
application/: controllers.py  dependencies.py  domain.py  endpoints.py  main.py  models.py  persistence.py  settings.py
tests/: conftest.py  factories.py  settings.py  test_controllers.py  test_endpoints.py  test_main.py  test_persistence.py
