[tool.poetry]
name = "game-list-app"
version = "0.1.0"
description = ""
authors = ["Wojciech Oczkowski <wojciech.oczkowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
