[tool.poetry]
name = "game-list-app"
version = "0.1.0"
description = ""
authors = ["Wojciech Oczkowski <wojciech.oczkowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
factory-boy = "^3.2.1"
pytest-asyncio = "^0.18.1"
pytest-motor = "^0.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
